# nlp_project_uspppm

./: .gitignore  README.md  data.py  infer.py  model.py  pyproject.toml  requirements.txt  sandbox.ipynb  submission.csv  train.py  utils.py
.dvc/: config
conf/: config.yaml
conf/data/: default.yaml
conf/inference/: default.yaml
conf/logger/: default.yaml
conf/model/: default.yaml
conf/secret/: default.yaml
conf/train/: default.yaml
data/: test.csv.dvc  train.csv.dvc
data/archive/: .gitignore  titles.csv.dvc
uspppm/: data.py  inference.py  logger.py  model.py  train.py  utils.py
