[project]
name = "nlp-project-uspppm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "peft>=0.19.1",
    "pip>=26.1.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "typing>=3.10.0.0",
]
