[project]
name = "nlp-project-uspppm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "mlflow>=3.12.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "peft>=0.19.1",
    "pip>=26.1.1",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "typing>=3.10.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
